--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
   <h1>{{title}}</h1>
-  <from action="/user/login" methon="post">
-    <input type="text name="username">
+  <form action="/user/login" method="post">
+    <input type="text" name="username">
     <input type="password" name="password">
-    <button type="submit">login</botton>
-  </from>
+    <button type="submit">login</button>
+  </form>
 {% endblock %}
