--- a/views/user/index.twig
+++ b/views/user/index.twig
@@ -2,5 +2,6 @@
 
 {% block body %}
   <h1>{{title}}</h1>
-  <p>Welcome to {{title}}</p>
+  <a href="/user/login">登入</a>
+  <a href="/user/logout">登出</a>
 {% endblock %}
