--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-<form>
+<form action="/user/register" method="post">
   <div class="mb-3">
     <label for="username" class="form-label">Username</label>
     <input type="text" class="form-control" id="username" name="username">
@@ -10,8 +10,10 @@
     <label for="password" class="form-label">Password</label>
     <input type="password" class="form-control" id="password" name="password">
   </div>
-  <button type="button" class="btn btn-primary" id="login">Login</button>
+  <div class="mb-3">
+    <label for="name" class="form-label">Name</label>
+    <input type="text" class="form-control" id="name" name="name">
+  </div>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
-<script src="/javascript/user.js"></script>
 {% endblock %}
