--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -1,34 +1,17 @@
 {% extends 'layout.twig' %}
-
 {% block body %}
   <h1>留言板頁面</h1>
   <div>
+    {% for row in rows %}
     <div class="card">
         <div class="card-header">
-            Featured
+            {{row['create_at']}}
         </div>
         <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">{{row['username']}}</h5>
+            <p class="card-text">{{row['message']}}</p>
         </div>
     </div>
-    <div class="card">
-        <div class="card-header">
-            Featured
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header">
-            Featured
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
+    {% endfor %}
   <div>
 {% endblock %}
