--- a/views/layout.twig
+++ b/views/layout.twig
@@ -10,14 +10,14 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid container">
-        <a class="navbar-brand" href="#">OOO系統</a>
+        <a class="navbar-brand" href="/user">購物車系統</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/user">首頁</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/message">留言板</a>
