--- a/views/user/index.twig
+++ b/views/user/index.twig
@@ -12,7 +12,7 @@
         <a href="/user" class="list-group-item list-group-item-action active" aria-current="true">
           歡迎 {{user}} 登入
         </a>
-        <a href="#" class="list-group-item list-group-item-action">儲值</a>
+        <a href="/user/recharge" class="list-group-item list-group-item-action">儲值</a>
         <a href="#" class="list-group-item list-group-item-action">金額紀錄</a>
         <a href="/user/logout" class="list-group-item list-group-item-action">登出</a>
         {% else %}
