--- a/views/user/recharge.twig
+++ b/views/user/recharge.twig
@@ -13,7 +13,7 @@
           歡迎 {{user}} 登入
         </a>
         <a href="/user/recharge" class="list-group-item list-group-item-action">儲值</a>
-        <a href="#" class="list-group-item list-group-item-action">金額紀錄</a>
+        <a href="/user/amount_log" class="list-group-item list-group-item-action">金額紀錄</a>
         <a href="/user/logout" class="list-group-item list-group-item-action">登出</a>
         {% else %}
         <a href="/user/login" class="list-group-item list-group-item-action">登入</a>
