--- a/views/index.twig
+++ b/views/index.twig
@@ -1,6 +1,2 @@
 {% extends 'layout.twig' %}
-
-{% block body %}
-  <h1>{{title}}</h1>
-  <p>歡迎來到購物車車</p>
-{% endblock %}
+{% extends 'itemlist.twig' %}
