--- a/views/layout.twig
+++ b/views/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ title }}</title>
+    <title>Ajax購物車測試</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -10,14 +10,14 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid container">
-        <a class="navbar-brand" href="#">XX系統</a>
+        <a class="navbar-brand" href="#">購物車系統</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">主頁</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/message">留言板</a>
@@ -38,7 +38,8 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link disabled">
+              </a>
             </li>
           </ul>
         </div>
