--- a/views/user/index.twig
+++ b/views/user/index.twig
@@ -1,7 +1,8 @@
 {% extends 'layout.twig' %}
 
+
 {% block body %}
-  <h1>{{title}}</h1>
+  <h1>會員中心</h1>
   {% if (error) %}
   <p>username or password fail</p>
   {% endif %}
@@ -20,9 +21,6 @@
         <a href="/user/register" class="list-group-item list-group-item-action">註冊</a>
         {% endif %}
       </div>
-    </div>
-    <div class="col-sm-9">
-      功能內頁
     </div>
   </div>
 {% endblock %}
