修正/添加頁碼/購物列表

--- a/views/error.twig
+++ b/views/error.twig
@@ -4,5 +4,5 @@
   <h1>{{message}}</h1>
   <h2>{{error.status}}</h2>
   <pre>{{error.stack}}</pre>
-{% do redirect('/index') %}
+  <a href="/index"></a>
 {% endblock %}
