--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -1,19 +1,19 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-  <h1>留言板頁面</h1>
+  <h1>廢話哈拉版</h1>
 
     <div class="card">
         <div class="card-header">
-            新增留言
+            這裡可以發佈任何你想發的信息，價格為1元
         </div>
         <div class="card-body">
             <form>
                 <div class="mb-3">
-                    <label for="message" class="form-label">留言內容</label>
+                    <label for="message" class="form-label">內容：</label>
                     <input type="text" class="form-control" id="message" name="message">
                 </div>
-                <button type="button" id="submit-message" class="btn btn-primary">送出</button>
+                <button type="button" id="submit-message" class="btn btn-primary">發佈</button>
             </form>
         </div>
     </div>
