--- a/views/user/amount_log.twig
+++ b/views/user/amount_log.twig
@@ -10,7 +10,7 @@
       <div class="list-group">
         {% if (user) %}
         <a href="/user" class="list-group-item list-group-item-action active" aria-current="true">
-          歡迎 {{user}} 登入
+          歡迎使用者 {{user}} 登入
         </a>
         <a href="/user/recharge" class="list-group-item list-group-item-action">儲值</a>
         <a href="/user/amount_log" class="list-group-item list-group-item-action">金額紀錄</a>
