--- a/views/itemlist.twig
+++ b/views/itemlist.twig
@@ -24,12 +24,12 @@
     <div class="col-sm-9">
         <table class="table">
             <thead>
-              為您推薦【購物清單畫面】
+              房客資訊
                 <tr>
                     <th>序號</th>
-                    <th>物品代碼</th>
-                    <th>數量</th>
-                    <th>價錢</th>
+                    <th>房客名稱</th>
+                    <th>通訊號碼</th>
+                    <th>備註</th>
                 </tr>
             </thead>
             <tbody>
@@ -41,25 +41,6 @@
                     <td>{{row['price']}}</td>
                 </tr>
                 {% endfor %}
-                <tr>
-                    <td>測試文字1</td>
-                    <td>測試文字1</td>
-                    <td>測試文字1</td>
-                    <td>測試文字1</td>
-                </tr>
-                <tr>
-                    <td>測試文字2</td>
-                    <td>測試文字2</td>
-                    <td>測試文字2</td>
-                    <td>測試文字2</td>
-                </tr>
-                <tr>
-                    <td>測試文字3</td>
-                    <td>測試文字3</td>
-                    <td>測試文字3</td>
-                    <td>測試文字3</td>
-                </tr>
-            </tbody>
         </table>
         <div class="col-md-12 text-center">
         <hr/>
