--- a/views/itemlist.twig
+++ b/views/itemlist.twig
@@ -57,5 +57,5 @@
     </div>
   </div>
 <div id="itemlist"><div>
-<script src="/routes/itemlist.js"></script>
+{# <script src="/routes/itemlist.js"></script> #}
 {% endblock %}
