--- a/views/layout.twig
+++ b/views/layout.twig
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title>大樓管理測試頁面</title>
+
+{# 如果想導入css，可以在這裡添加 #}
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
+{# 這個是bootstrap的鏈接方式，documentation裡面有教程，參照教材內的操作即可 #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </head>
+
+  {# body開始是網頁內顯示的所有東西 #}
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid container">
