“修改message，做成repair維修記錄”

--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -1,10 +1,10 @@
 {% extends 'layout.twig' %}
 {% block body %}
-  <h1>廢話哈拉版</h1>
+  <h1>報修中心</h1>
 
     <div class="card">
         <div class="card-header">
-            這裡可以發佈任何你想發的信息，價格為1元
+            報修
         </div>
         <div class="card-body">
             <form>
