--- a/views/layout.twig
+++ b/views/layout.twig
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/itemlist">itemlist列表</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/message">Message</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 會員
