修改字框界面，node SQL更新

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -25,10 +25,10 @@
               <a class="nav-link active" aria-current="page" href="/">主頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/itemlist">itemlist列表</a>
+              <a class="nav-link" href="/itemlist">Itemlist</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/message">Message</a>
+              <a class="nav-link" href="/message">維修中心</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
