--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -1,17 +1,19 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-<form>
-  <div class="mb-3">
-    <label for="username" class="form-label">Username</label>
-    <input type="text" class="form-control" id="username" name="username">
-  </div>
-  <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password" name="password">
-  </div>
-  <button type="button" class="btn btn-primary" id="login">Login</button>
-</form>
-
-<script src="/javascript/user.js"></script>
+<h1>賬戶登入</h1>
+	<br>
+		<form>
+			<div class="form-floating mb-3">
+			    <input type="text" class="form-control" id="username" name="username" placeholder="	username">
+			    <label for="username" class="form-label">賬戶ID</label>
+			</div>
+			<div class="form-floating mb-3">
+				<input type="password" class="form-control" id="password" name="password" placeholder="	password">
+				<label for="password" class="form-label">密碼</label>
+			</div>
+			<button type="button" class="btn btn-primary" id="login">登入</button>
+		</form>
+		
+		<script src="/javascript/user.js"></script>
 {% endblock %}
