--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,20 +1,21 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-
-<form action="/user/register" method="post">
-  <div class="mb-3">
-    <label for="username" class="form-label">Username</label>
-    <input type="text" class="form-control" id="username" name="username">
-  </div>
-  <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password" name="password">
-  </div>
-  <div class="mb-3">
-    <label for="name" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name" name="name">
-  </div>
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
+<h1>賬戶註冊</h1>
+<br>
+  <form action="/user/register" method="post">
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="username" name="username" placeholder="username">
+      <label for="username" class="form-label">賬戶ID</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="password" class="form-control" id="password" name="password" placeholder="password">
+      <label for="password" class="form-label">密碼</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="name" name="name" placeholder="name">
+      <label for="name" class="form-label">顯示名稱</label>
+    </div>
+    <button type="submit" class="btn btn-primary">註冊</button>
+  </form>
 {% endblock %}
