--- a/views/itemlist/index.twig
+++ b/views/itemlist/index.twig
@@ -1,13 +1,14 @@
 {% extends 'layout.twig' %}
 {% block body %}
     <div class="col-sm-9">
-        <table class="table">
+        <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>ITEMCODE</th>
-                    <th>PRICE</th>
-                    <th>QUANTITY</th>
+                    <th>#</th>
+                    <th>房號</th>
+                    <th>名字</th>
+                    <th>聯絡</th>
+                    <th> </th>
                 </tr>
             </thead>
             <tbody>
@@ -17,6 +18,7 @@
                     <td>{{row['itemcode']}}</td>
                     <td>{{row['price']}}</td>
                     <td>{{row['quantity']}}</td>
+                    <td><button type="button" id="edit-itemlist-{{row['id']}}" class="btn btn-outline-secondary btn-sm">Edit</button><td>
                 </tr>
                 {% endfor %}
             </tbody>
