--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -9,20 +9,25 @@
                     <form>
                         <div class="mb-3">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="message" name="message" placeholder="message">
-                                <label for="message" class="form-label">房號</label>
+                                <input type="text" class="form-control" id="ROOM" name="ROOM" placeholder="message">
+                                <label for="ROOM" class="form-label">房號</label>
+                            </div>
+                            <br>
+
+                             <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="REPORTDATE" name="REPORTDATE" placeholder="message">
+                                <label for="REPORTDATE" class="form-label">故障時間</label>
+                            </div>
+                          
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="DEVICE" name="DEVICE" placeholder="message">
+                                <label for="DEVICE" class="form-label">故障設備</label>
                             </div>
                             <br>
 
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="message" name="message" placeholder="message">
-                                <label for="message" class="form-label">故障設備</label>
-                            </div>
-                            <br>
-
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="message" name="message" placeholder="message">
-                                <label for="message" class="form-label">故障情況</label>
+                                <input type="text" class="form-control" id="PROBLEM " name="PROBLEM " placeholder="message">
+                                <label for="PROBLEM " class="form-label">故障情況</label>
                             </div>
                             <br>
         
