--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -26,12 +26,12 @@
                             <br>
 
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="PROBLEM " name="PROBLEM " placeholder="message">
-                                <label for="PROBLEM " class="form-label">故障情況</label>
+                                <input type="text" class="form-control" id="PROBLEM" name="PROBLEM" placeholder="message">
+                                <label for="PROBLEM" class="form-label">故障情況</label>
                             </div>
                             <br>
         
-                            <button type="button" id="submit-message" class="btn btn-primary">回報</button>
+                            <button type="submit" id="submit-message" class="btn btn-primary">回報</button>
                         </div>
                     </form>
                 </div>
