--- a/views/layout.twig
+++ b/views/layout.twig
@@ -30,6 +30,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/message">報修中心</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/visitors">訪客登記</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 會員
