--- a/views/visitors/index.twig
+++ b/views/visitors/index.twig
@@ -1,5 +1,45 @@
 {% extends 'layout.twig' %}
 {% block body %}
+      <h1>訪客登記</h1>
+        <div class="d-flex justify-content-start w-100">
+            <div class="card col-md-4 w-100" style="width: 50%;">
+                <div class="card-header">登記</div>
+                
+                <div class="card-body">
+                    <form>
+                        <div class="mb-3">
+                            <div class="form-floating mb-3">
+                            </div>
+                            <br>
+
+                             <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="VDATE" name="VDATE" placeholder="message">
+                                <label for="VDATE" class="form-label">拜訪時間</label>
+                            </div>
+                          
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="VNAME" name="VNAME" placeholder="message">
+                                <label for="VNAME" class="form-label">名子</label>
+                            </div>
+                            <br>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="IDCARD" name="IDCARD" placeholder="message">
+                                <label for="IDCARD" class="form-label">身分證</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="VROOM" name="VROOM" placeholder="message">
+                                <label for="VROOM" class="form-label">拜訪房號</label>
+                            </div>
+                            <br>
+        
+                            <button type="submit" id="submit-message" class="btn btn-primary">回報</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    <div id="visitors-list"><div>
+    <script src="/javascript/visitors.js"></script>
     <div class="col-sm-9">
         <table class="table table-striped">
             <thead>
