修復listview，刪除不必要的文件

--- a/views/visitors/index.twig
+++ b/views/visitors/index.twig
@@ -19,7 +19,7 @@
                           
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" id="VNAME" name="VNAME" placeholder="message">
-                                <label for="VNAME" class="form-label">名子</label>
+                                <label for="VNAME" class="form-label">名字</label>
                             </div>
                             <br>
                             <div class="form-floating mb-3">
