--- a/views/visitors/index.twig
+++ b/views/visitors/index.twig
@@ -65,4 +65,31 @@
         </table>
     </div>
     <div id="visitors"><div>
+
+<script>
+    // 取得當前網路時間
+    let now = new Date();
+    let year = now.getFullYear();
+    let month = now.getMonth() + 1;
+    let date = now.getDate();
+    let hour = now.getHours();
+    let minutes = now.getMinutes();
+    let seconds = now.getSeconds();
+
+    // 格式化時間字串
+    if (hour < 10) {
+        hour = "0" + hour;
+    }
+    if (minutes < 10) {
+        minutes = "0" + minutes;
+    }
+    if (seconds < 10) {
+        seconds = "0" + seconds;
+    }
+    let formattedDate = year + "-" + month + "-" + date + " " + hour + ":" + minutes + ":" + seconds;
+
+    // 將格式化後的時間字串填入表單欄位
+    document.getElementById("VDATE").value = formattedDate;
+</script>
+
 {% endblock %}
