--- a/views/layout.twig
+++ b/views/layout.twig
@@ -25,13 +25,13 @@
               <a class="nav-link active" aria-current="page" href="/">主頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/itemlist">房客資料</a>
+              <a class="nav-link" href="/itemlist">房客資料管理</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/message">報修中心</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/visitors">訪客登記</a>
+              <a class="nav-link" href="/visitors">訪客資料管理</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
