--- a/views/index.twig
+++ b/views/index.twig
@@ -14,9 +14,9 @@
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <div class="button-container">
-    <p><a type="button" class="btn btn-primary btn-lg" href="/itemlist"><i class="bi bi-people"></i> 房客資料</a></p>
+    <p><a type="button" class="btn btn-primary btn-lg" href="/itemlist"><i class="bi bi-people"></i> 房客資料管理</a></p>
     <p><a type="button" class="btn btn-danger btn-lg" href="/message"><i class="bi bi-tools"></i> 報修中心</a></p>
-	<p><a type="button" class="btn btn-warning btn-lg" href="/visitors" style="color: white;"><i class="bi bi-pass"></i> 房客登記</a></p>
+	<p><a type="button" class="btn btn-warning btn-lg" href="/visitors" style="color: white;"><i class="bi bi-pass"></i> 訪客資料管理</a></p>
     <p><a type="button" class="btn btn-success btn-lg" href="/user"><i class="bi bi-person-fill-gear"></i> 會員</a></p>
 </div>
 
