--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -8,14 +8,14 @@
                 <div class="card-body">
                     <form>
                         <div class="mb-3">
+                            <br>
+                             <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="REPORTDATE" name="REPORTDATE" placeholder="message" disabled>
+                                <label for="REPORTDATE" class="form-label" >故障時間</label>
+                            </div>
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" id="ROOM" name="ROOM" placeholder="message">
                                 <label for="ROOM" class="form-label">房號</label>
-                            </div>
-                            <br>
-                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="REPORTDATE" name="REPORTDATE" placeholder="message">
-                                <label for="REPORTDATE" class="form-label">故障時間</label>
                             </div>  
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" id="DEVICE" name="DEVICE" placeholder="message">
@@ -37,5 +37,34 @@
             <div id="message-list"></div>
         </div>
     </div>
-    <script src="/javascript/message.js"></script>
+<script src="/javascript/message.js"></script>
+<script>
+    function refreshTime() {
+        // 取得當前網路時間
+        let now = new Date();
+        let year = now.getFullYear();
+        let month = now.getMonth() + 1;
+        let date = now.getDate();
+        let hour = now.getHours();
+        let minutes = now.getMinutes();
+        let seconds = now.getSeconds();
+
+        // 格式化時間字串
+        if (hour < 10) {
+            hour = "0" + hour;
+        }
+        if (minutes < 10) {
+            minutes = "0" + minutes;
+        }
+        if (seconds < 10) {
+            seconds = "0" + seconds;
+        }
+        let formattedDate = year + "-" + month + "-" + date + " " + hour + ":" + minutes + ":" + seconds;
+
+        // 將格式化後的時間字串填入表單欄位
+        document.getElementById("REPORTDATE").value = formattedDate;
+    }
+
+    setInterval(refreshTime, 1000);
+</script>
 {% endblock %}
