--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -1,19 +1,34 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-<h1>賬戶登入</h1>
-	<br>
-		<form>
-			<div class="form-floating mb-3">
-			    <input type="text" class="form-control" id="username" name="username" placeholder="	username">
-			    <label for="username" class="form-label">賬戶ID</label>
+<div class="container-fluid">
+	<div class="row h-100 align-items-center justify-content-center">
+		<div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+			<div class="bg-transparent rounded p-4 p-sm-5 my-4 mx-3">
+				<div class="d-flex align-items-center justify-content-between mb-3">
+					<div class="card col-12">
+						<div class="card-body">
+							<h1 class="card-title">賬戶登入</h1>
+							<br>
+							<form>
+								<div class="form-floating mb-3">
+									<input type="text" class="form-control" id="username" name="username" placeholder="賬戶ID">
+									<label for="username">賬戶ID</label>
+								<br>
+								<div class="form-floating mb-3">
+									<input type="password" class="form-control" id="password" name="password" placeholder="密碼">
+									<label for="password">密碼</label>
+								</div>
+								<button type="button" class="btn btn-primary" id="login">登入</button>
+								<p class="mt-3">若無賬號，請先<a href="register">註冊</a></p>
+							</form>
+
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="form-floating mb-3">
-				<input type="password" class="form-control" id="password" name="password" placeholder="	password">
-				<label for="password" class="form-label">密碼</label>
-			</div>
-			<button type="button" class="btn btn-primary" id="login">登入</button>
-		</form>
-		
-		<script src="/javascript/user.js"></script>
+		</div>
+	</div>
+</div>
+<script src="/javascript/user.js"></script>
 {% endblock %}
