--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,21 +1,35 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-<h1>賬戶註冊</h1>
-<br>
-  <form action="/user/register" method="post">
-    <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="username" name="username" placeholder="username">
-      <label for="username" class="form-label">賬戶ID</label>
+<div class="container-fluid">
+  <div class="row h-100 align-items-center justify-content-center">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+      <div class="bg-transparent rounded p-4 p-sm-5 my-4 mx-3">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <div class="card col-12">
+            <div class="card-body">
+              <h1 class="card-title">賬戶註冊</h1>
+              <br>
+              <form action="/user/register" method="post">
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="username" name="username" placeholder="username">
+                  <label for="username" class="form-label">賬戶ID</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="password" class="form-control" id="password" name="password" placeholder="password">
+                  <label for="password" class="form-label">密碼</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="name" name="name" placeholder="name">
+                  <label for="name" class="form-label">顯示名稱</label>
+                </div>
+                <button type="submit" class="btn btn-primary">註冊</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="form-floating mb-3">
-      <input type="password" class="form-control" id="password" name="password" placeholder="password">
-      <label for="password" class="form-label">密碼</label>
-    </div>
-    <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="name" name="name" placeholder="name">
-      <label for="name" class="form-label">顯示名稱</label>
-    </div>
-    <button type="submit" class="btn btn-primary">註冊</button>
-  </form>
+  </div>
+</div>
 {% endblock %}
