--- a/views/visitors/index.twig
+++ b/views/visitors/index.twig
@@ -11,7 +11,7 @@
                             <div class="form-floating mb-3"></div>
                             <br>
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="VDATE" name="VDATE" placeholder="message">
+                                <input type="text" class="form-control" id="VDATE" name="VDATE" placeholder="message" disabled>
                                 <label for="VDATE" class="form-label">拜訪時間</label>
                             </div>    
                             <div class="form-floating mb-3">
@@ -27,7 +27,7 @@
                                 <label for="VROOM" class="form-label">拜訪房號</label>
                             </div>
                             <br>
-                            <button type="submit" id="submit-message" class="btn btn-primary">回報</button>
+                            <button type="submit" id="submit-visitors" class="btn btn-primary">回報</button>
                         </div>
                     </form>
                 </div>
@@ -68,29 +68,33 @@
 
 <script src="/javascript/visitors.js"></script>
 <script>
-    // 取得當前網路時間
-    let now = new Date();
-    let year = now.getFullYear();
-    let month = now.getMonth() + 1;
-    let date = now.getDate();
-    let hour = now.getHours();
-    let minutes = now.getMinutes();
-    let seconds = now.getSeconds();
+    function refreshTime() {
+        // 取得當前網路時間
+        let now = new Date();
+        let year = now.getFullYear();
+        let month = now.getMonth() + 1;
+        let date = now.getDate();
+        let hour = now.getHours();
+        let minutes = now.getMinutes();
+        let seconds = now.getSeconds();
 
-    // 格式化時間字串
-    if (hour < 10) {
-        hour = "0" + hour;
-    }
-    if (minutes < 10) {
-        minutes = "0" + minutes;
-    }
-    if (seconds < 10) {
-        seconds = "0" + seconds;
-    }
-    let formattedDate = year + "-" + month + "-" + date + " " + hour + ":" + minutes + ":" + seconds;
+        // 格式化時間字串
+        if (hour < 10) {
+            hour = "0" + hour;
+        }
+        if (minutes < 10) {
+            minutes = "0" + minutes;
+        }
+        if (seconds < 10) {
+            seconds = "0" + seconds;
+        }
+        let formattedDate = year + "-" + month + "-" + date + " " + hour + ":" + minutes + ":" + seconds;
 
-    // 將格式化後的時間字串填入表單欄位
-    document.getElementById("VDATE").value = formattedDate;
+        // 將格式化後的時間字串填入表單欄位
+        document.getElementById("VDATE").value = formattedDate;
+    }
+
+    setInterval(refreshTime, 1000);
 </script>
 
 {% endblock %}
