--- a/views/visitors/index.twig
+++ b/views/visitors/index.twig
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <div id="visitors"><div>
+    <div id="visitors-list"></div>
 
 <script src="/javascript/visitors.js"></script>
 <script>
